--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
-    "chromedriver": "^81.0.0",
+    "chromedriver": "^83.0.0",
     "geckodriver": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "webdriver-manager": "^12.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
